set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})
file(GLOB EXAMPLES_SOURCES *.cxx)
foreach(example ${EXAMPLES_SOURCES})
    string(REPLACE ".cxx" "" full_example_path ${example})
    get_filename_component(example_name ${full_example_path} NAME)
    add_executable(${example_name} ${example} ../src/logo.rc)
    target_link_libraries(${example_name} ${LIB_NAME})
    target_include_directories(${example_name} PUBLIC ../build/include)
endforeach(example ${EXAMPLES_SOURCES})
